--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Pixel Tamagotchi</title>
+  <title>My Little Xia</title>
   <style>
     body {
       background: #222;
@@ -26,9 +26,9 @@
   </style>
 </head>
 <body>
-  <h1>🐾 Pixel Tamagotchi</h1>
+  <h1>🐾 My Little Xia</h1>
   <div class="pet">
-    (ᵔᴥᵔ)  <!-- Simple pet face -->
+    (,,>ヮ<,,)!  <!-- Simple pet face -->
   </div>
   <div class="stats">
     Hunger: <span id="hunger">100</span><br>
